# C_KAN

./: CMakeLists.txt  library.h  qodana.sarif.json
examples/: compare_models.c  fit_function.c
include/: ckan.h  dataset.h  kan.h  loss.h  mlp.h  model.h  random.h  trainer.h
src/core/: model.c
src/data/: dataset.c
src/models/: kan.c  mlp.c
src/training/: loss.c  trainer.c
src/utils/: random.c
tests/: test_dataset.c  test_fftw.c  test_kan.c  test_mlp.c
